# adaptive-hvac

./: .DEV_README.md.swp  DEV_README.md  GEMINI.md  README.md  hacs.json  hass_log.txt  mockup.html  output.txt  pyproject.toml
.dev_config/: .configuration.yaml.swp  configuration.yaml  home-assistant.log.1  home-assistant_v2.db  home-assistant_v2.db-shm  home-assistant_v2.db-wal
.dev_config/.storage/: adaptive_hvac  assist_pipeline.pipelines  auth  auth_provider.homeassistant  core.area_registry  core.config  core.config_entries  core.device_registry  core.entity_registry  core.floor_registry  core.restore_state  core.uuid  frontend.user_data_c230c4e8a1e94274a427f9140b8c875f  homeassistant.exposed_entities  http  http.auth  lovelace  lovelace.dashboard_hvac  lovelace_dashboards  lovelace_resources  person  repairs.issue_registry
.dev_config/custom_components/: adaptive_hvac
.dev_config/www/: adaptive-hvac-card-BYRr71R5.mjs  adaptive-hvac-card-pZsWYg23.mjs  adaptive-hvac-card.js  adaptive-hvac-panel.js  state-DrUM-GqQ.mjs
custom_components/adaptive_hvac/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  storage.py  websocket.py
custom_components/adaptive_hvac/www/: adaptive-hvac-card-De56Mz-T.mjs  adaptive-hvac-card.js  adaptive-hvac-panel.js
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: adaptive-hvac-card.test.ts  adaptive-hvac-card.ts  adaptive-hvac-panel.ts  harness.ts  types.ts
tests/: conftest.py
tests/custom_components/adaptive_hvac/: test_coordinator.py  test_storage.py
