[project]
name = "adaptive-hvac"
version = "0.0.1"
description = "Adaptive HVAC integration for Home Assistant"
requires-python = ">=3.13, <3.14"
dependencies = []

[tool.ruff]
select = ["E", "F", "I"]
line-length = 88
target-version = "py313"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[dependency-groups]
dev = [
    "homeassistant>=2024.3.3",
    "isal>=1.8.0",
    "pytest-homeassistant-custom-component>=0.13.179",
    "zlib-ng>=1.0.0",
]
